Add libxsql tests and fix CMake issues
- Add 25 comprehensive tests for libxsql (vtable + database)
- Fix sqlite3 target INTERFACE_INCLUDE_DIRECTORIES for CMake compatibility
- Fix pdbsql tests: use CMAKE_CURRENT_SOURCE_DIR for test PDB path

Test results:
- libxsql: 25 tests passed
- pdbsql: 31 tests passed
- idasql: builds successfully, requires IDA DLLs to run

--- a/external/sqlite/CMakeLists.txt
+++ b/external/sqlite/CMakeLists.txt
@@ -2,7 +2,10 @@ add_library(sqlite3 STATIC
     sqlite3.c
 )
 
-target_include_directories(sqlite3 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(sqlite3 PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+    $<INSTALL_INTERFACE:include>
+)
 
 # SQLite compile options
 target_compile_definitions(sqlite3 PRIVATE
