--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,4 +1,28 @@
-# libxsql tests
-# TODO: Add GoogleTest and test files
+# libxsql tests - GoogleTest-based test suite
 
-message(STATUS "libxsql tests: Not yet implemented")
+include(FetchContent)
+FetchContent_Declare(
+    googletest
+    GIT_REPOSITORY https://github.com/google/googletest.git
+    GIT_TAG v1.14.0
+)
+
+# For Windows: Prevent overriding the parent project's compiler/linker settings
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(googletest)
+
+enable_testing()
+
+# Test executable
+add_executable(xsql_tests
+    test_vtable.cpp
+    test_database.cpp
+)
+
+target_link_libraries(xsql_tests PRIVATE
+    GTest::gtest_main
+    xsql::xsql
+)
+
+include(GoogleTest)
+gtest_discover_tests(xsql_tests)
