Add thinclient module to libxsql
Optional HTTP server/client infrastructure for *sql tools:
- xsql::thinclient::server - HTTP server wrapper (cpp-httplib)
- xsql::thinclient::client - HTTP client wrapper
- xsql::thinclient::cli - Shared CLI argument parsing

Enable with: cmake -DXSQL_WITH_THINCLIENT=ON

Usage:
  tool -s db --serve --port 5555    # Server mode
  tool --port 5555 -c "SELECT ..."  # Client mode
  curl localhost:5555/query -d SQL  # curl access

10 new tests (35 total for libxsql)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,8 +33,32 @@ target_link_libraries(xsql INTERFACE sqlite3)
 
 target_compile_features(xsql INTERFACE cxx_std_17)
 
+# ============================================================================
+# Thin Client (optional HTTP server/client)
+# ============================================================================
+
+option(XSQL_WITH_THINCLIENT "Build thin client support (HTTP server/client)" OFF)
+
+if(XSQL_WITH_THINCLIENT)
+    include(FetchContent)
+    FetchContent_Declare(
+        httplib
+        GIT_REPOSITORY https://github.com/yhirose/cpp-httplib.git
+        GIT_TAG        v0.15.3
+    )
+    FetchContent_MakeAvailable(httplib)
+
+    target_compile_definitions(xsql INTERFACE XSQL_HAS_THINCLIENT)
+    target_link_libraries(xsql INTERFACE httplib::httplib)
+endif()
+
 # Make find_package(xsql) work from build tree
-export(TARGETS xsql sqlite3
+set(XSQL_EXPORT_TARGETS xsql sqlite3)
+if(XSQL_WITH_THINCLIENT)
+    list(APPEND XSQL_EXPORT_TARGETS httplib)
+endif()
+
+export(TARGETS ${XSQL_EXPORT_TARGETS}
     NAMESPACE xsql::
     FILE "${CMAKE_CURRENT_BINARY_DIR}/xsqlTargets.cmake"
 )
