Add port 0 support and Windows socklen_t typedef
- server.hpp: Use getsockname() to retrieve actual port when port=0
- server.hpp: Add socklen_t typedef for Windows compatibility
- CMakeLists.txt: Minor build adjustments

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,6 +77,11 @@ if(XSQL_WITH_THINCLIENT)
     list(APPEND XSQL_EXPORT_TARGETS httplib)
 endif()
 
+# Include nlohmann_json in export if it was fetched (not system-installed)
+if(TARGET nlohmann_json AND NOT nlohmann_json_FOUND)
+    list(APPEND XSQL_EXPORT_TARGETS nlohmann_json)
+endif()
+
 export(TARGETS ${XSQL_EXPORT_TARGETS}
     NAMESPACE xsql::
     FILE "${CMAKE_CURRENT_BINARY_DIR}/xsqlTargets.cmake"
