fix: enable -fPIC for SQLite static library

--- a/external/sqlite/CMakeLists.txt
+++ b/external/sqlite/CMakeLists.txt
@@ -2,6 +2,9 @@ add_library(sqlite3 STATIC
     sqlite3.c
 )
 
+# Enable position-independent code for linking into shared libraries
+set_property(TARGET sqlite3 PROPERTY POSITION_INDEPENDENT_CODE ON)
+
 target_include_directories(sqlite3 PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
     $<INSTALL_INTERFACE:include>
